<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:stretchColumns="1"
	android:shrinkColumns="1">


    <LinearLayout
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:layout_height="wrap_content">
		<Spinner
		    android:id="@+id/kindSpinner"
		    android:textSize="10pt"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>        
		<EditText
		    android:id="@+id/foodText"
		    android:hint="@string/food_name"
		    android:textSize="10pt"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"/>
	</LinearLayout>
    
    <!--  単位-->
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Spinner
			android:id="@+id/unitSpinner"
			android:gravity="right"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:entries="@array/selection"
			android:spinnerMode="dialog"
			/>
		<TextView
			android:text="@string/per"
			android:gravity="center_vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
			</TableRow>
	    		
	<!--  タンパク質-->
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/proteinLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<EditText
			android:id="@+id/proteinText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"/>
	</TableRow>
	
	<!-- 炭水化物 -->
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/carbohydrateLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<EditText
			android:id="@+id/carbohydrateText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"/>
			</TableRow>

	<!-- 脂質　-->
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:text="@string/lipidLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<EditText
			android:id="@+id/lipidText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"/>			
	</TableRow>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/favorite" />
    </LinearLayout>
    
     <SeekBar
	        android:id="@+id/satisfactionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50"
            android:max="100"
            />
	<ImageView
	    android:contentDescription="@string/image"
	    android:id="@+id/foodImage"
	    android:src="@drawable/ic_launcher" 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    />
	<Button
	    android:id="@+id/setImageButton"
	    android:text="@string/setImage"
	    android:layout_width="10dp"
	    android:layout_height="wrap_content"
	    
	    />

</TableLayout>