<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	

	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

	    <TextView
            android:id="@+id/datelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateLabel"
            android:textSize="19dip" />
	    <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dip" />
    </LinearLayout>

	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/energylabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energyLabel"
            android:textSize="19dip" />

        <TextView
            android:id="@+id/energyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dip" />
    </LinearLayout>

		
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >


        <TextView
            android:id="@+id/proteinlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proteinLabel"
            android:textSize="19dip" />

        <TextView
            android:id="@+id/proteinValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dip" />
    </LinearLayout>
    
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/carbohydratelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbohydrateLabel"
            android:textSize="19dip" />

        <TextView
            android:id="@+id/carbohydrateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dip" />
    </LinearLayout>

	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lipidlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lipidLabel"
            android:textSize="19dip" />

        <TextView
            android:id="@+id/lipidValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dip" />
    </LinearLayout>
    
    
</LinearLayout>